--- a/digitallink_toolkit_server/package.json
+++ b/digitallink_toolkit_server/package.json
@@ -1,11 +1,11 @@
 {
   "name": "digiatllink_toolkit_server",
-  "version": "2.2.0",
+  "version": "2.4.0",
   "description": "The Digital Link Toolkit server",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Nick Lansley for GS1 AISBL",
+  "author": "Mark Harrison, Nick Lansley and Rajesh Kumar Rana for GS1 AISBL",
   "license": "ISC"
 }
