--- a/resolver_data_entry_server/package.json
+++ b/resolver_data_entry_server/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "resolver-data-entry-server",
-	"version": "0.0.0",
+	"version": "2.4.0",
 	"private": true,
 	"main": "./bin/www",
 	"scripts": {
 		"start": "node ./bin/www"
 	},
-	"author": "Nick Lansley",
+	"author": "Nick Lansley and Rajesh Kumar Rana for GS1 AISBL",
 	"license": "ISC",
 	"dependencies": {
 		"applicationinsights": "^1.8.5",
@@ -15,7 +15,7 @@
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
 		"express": "~4.16.1",
-		"express-rate-limit": "^5.1.3",
+		"express-rate-limit": "^5.2.6",
 		"helmet": "^4.1.1",
 		"hpp": "^0.2.3",
 		"http-errors": "~1.6.3",
@@ -23,7 +23,7 @@
 		"morgan": "~1.9.1",
 		"mssql": "^6.2.1",
 		"node-fetch": "^2.6.1",
-		"pug": "^2.0.4",
+		"pug": "^3.0.2",
 		"pug-lint": "^2.6.0",
 		"xss": "^1.0.8"
 	},
