New V2.6 - now designed for setup out-of-the-box on ARM-64-based processors such as Raspberry Pi 4 and Apple Silicon as well as Intel. We've achieved this by changing the default SQL Server container from SQL Server 2017 to SQL Azure Edge. See README.md for more.

--- a/resolver_sql_server/Dockerfile
+++ b/resolver_sql_server/Dockerfile
@@ -1,7 +1,18 @@
-# This Dockerfile will build a Microsoft SQL Server Express edition container and copy across the SQL script
-# which you will run inside the container once it is up and running.
-# ONLY USE THIS CONTAINER FOR EXPERIMENTATION - Use proper cloud or on-premises-based databases in production
-FROM mcr.microsoft.com/mssql/server:2017-latest
+# In v2.6 we have switched the Microsoft SQL Server  edition to 'Azure SQL Edge' which
+# works on ARM 64 (e.g. Raspberry Pi 4) and Apple Silicon (latest Mac) processors as well as Intel x64 processors.
+# It is fully compatible with our previous choice of 'SQL Server 2017 Developer' edition, but if you are
+# running on Intel processors then you can always use the older edition (commented out below).
+
+# Once you have set the servioce running, use a SQL Client to connect to the server using 'sa' and the password
+# you set in the environment variable 'MSSQL_SA_PASSWORD' in docker-compose.yml. Once connected, you can create a database
+# with sample data by execuitng the script sqldb_create_script.sql stored in the same directory as this Dockerfile.
+
+# FROM mcr.microsoft.com/mssql/server:2017-latest
+FROM mcr.microsoft.com/azure-sql-edge:latest
+
+# This root user is needed to for Azure SQL Edge to initialise the first time. Once initialised you can comment out this line
+# since the initial configuration persists on docker volumes (see docker-compose.yml)
+USER root
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV ACCEPT_EULA=Y
@@ -21,17 +32,13 @@ ENV MSSQL_PID=Express
 ENV MSSQL_LCID=1033
 
 # If you have lots of memory in host environment running this container, this can go higher. Lower memory limits can place limits on the SQL Server's in-memory sorting
-# capabilities and thus slow it down. However, if you are not processing big data changes updates through the servefr then this is fine. The stored procedures used by
+# capabilities and thus slow it down. However, if you are not processing big data changes updates through the server then this is fine. The stored procedures used by
 # tha data entry API data_gs1_org have been designed to minimise processing load as much as possible.
 ENV MSSQL_MEMORY_LIMIT_MB=1024
 
-# Enabling MSSQL Agent will allow scheduled tasks to be conducted such as performing regukar backups (Not imeplmented yet in this project yet)
+# Enabling MSSQL Agent will allow scheduled tasks to be conducted such as performing regular backups (Not imeplmented yet in this project yet)
 # More at: https://docs.microsoft.com/en-us/sql/linux/sql-server-linux-run-sql-server-agent-job?view=sql-server-2017
+# BUT NOTE: SQL Azure Edge does not include the SQL Agent, only standard SQL Server 201x editions do.
 ENV MSSQL_AGENT_ENABLED=true
 
-# Copy the scripts and convert them to unix format
-RUN apt-get update -y && apt-get dist-upgrade -y && apt-get install -y dos2unix
-COPY sqldb_create_script.sql /gs1resolver_sql_scripts/sqldb_create_script.sql
 
-# Convert any Windows formatted text files to unix format.
-RUN find  /gs1resolver_data/setup/* -type f -print0 | xargs -0 dos2unix
