Since more end-users are using Resolver CE in a multi-container envrionment such as Docker Compose, Docker Swarm and Kubernetes, the build sync server has switched from starting 'index.js' to starting 'app.js' in Dockerfile. 'index.js' keeps the container running all the time with an interval timer, whereas 'app.js' causes the container to run once and stop after each processing event, relying on external cron time processing to restart. For Docker Compose, a restart time is built into the build sync server, and docker-compose.yml starts it when it stops. ### Version 2.5 Features

--- a/build_sync_server/Dockerfile
+++ b/build_sync_server/Dockerfile
@@ -41,4 +41,7 @@ HEALTHCHECK CMD curl http://localhost/healthcheck || exit 1
 # If the usual practice of 'npm start' is used, any SIGTERM arriving to stop the
 # container in a controlled manner is instead absorbed by NPM and the container
 # keeps going until it is forced-stopped.
-ENTRYPOINT ["node","/buildsync/src/index.js"]
+# Start app.js if in a multi-container environment, such as Dockrr Compose, Docker Swarm or Kubernetes.
+ENTRYPOINT ["node","/buildsync/src/app.js"]
+# Insteaf, start index,js if in a single-container environment, such as Docker command, or cloud function.
+# ENTRYPOINT ["node","/buildsync/src/index.js"]
