--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Created by .ignore support plugin (hsz.mobi)
 .gitignore
+.idea
 resolver_data_entry_server/node_modules/
 resolver_web_server/node_modules/
 build_sync_server/node_modules/
