--- a/frontend_proxy_server/nginx.conf
+++ b/frontend_proxy_server/nginx.conf
@@ -35,5 +35,9 @@ http {
         location /api {
             proxy_pass http://data-entry-service:3000/api;
         }
+
+        location /api/ {
+            proxy_pass http://data-entry-service:3000/api/;
+        }
     }
 }
