Add a new test service with Docker and HTTP API updates
Introduce a test suite with a new Flask-based service to handle HTTP operations. Implement a corresponding Dockerfile and update the Docker Compose configuration for easy deployment of this service. Furthermore, enhance the existing proxy server to route requests to the newly added test service and streamline file routing operations in the application logic, including introduction of a utility for handling non-GS1 Digital Link requests.

These changes significantly improve the modularity and scalability of the system, as different services can now be developed, deployed, and maintained independently. The introduction of the test service is a great step toward separating different functionalities, making it easier to test and interact with different APIs. However, some parts could benefit from more extensive error handling to ensure robustness, particularly around HTTP requests.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,14 @@ services:
     networks:
       - resolver-internal-network
 
+  test-service:
+    build: './test_suite'
+    container_name: test-service
+    restart: always
+    ports:
+      - "4001:5000"
+    networks:
+      - resolver-internal-network
 
 volumes:
   resolver-database-volume: {}
