added Link header authoring and refactored a couple of unwieldy functions. Added FQDN domain name environment variable used in the creation of the Link header,
AI Observations:

The refactoring of the bracket style significantly enhances the readability of the code, making it easier to follow and maintain. Overall, these changes bolster the code's readability and adapt the settings to potentially more modern deployment environments.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
   web-service:
     build: './web_server'
     container_name: resolver-web-server
+    environment:
+      - FQDN=put-your-fully-qualified-domain-name-here.com
     depends_on:
       - database-service
     restart: always
