Refactor request handling and enhance linkset response logic
Updated `_get_request_parameters` to handle case-insensitive query strings for 'linktype' and 'context'. Enhanced linkset responses to include JSON-LD context and properly format responses when linkset requests are identified. Added fallback handling for environment variables related to FQDN and included debug logs for easier troubleshooting.

AI Observations:

The refactoring and enhancements improve robustness and interoperability, particularly by addressing case-sensitivity in query strings and enhancing the structure of linkset responses. However, the changes introduce additional complexity, which may slightly impact readability and maintainability. Consider modularizing the JSON-LD response construction to simplify the code further and mitigate the risk of future bugs.

--- a/web_server/Dockerfile
+++ b/web_server/Dockerfile
@@ -5,6 +5,10 @@ LABEL authors="nick"
 # to the terminal without buffering it first
 ENV PYTHONUNBUFFERED 1
 
+ # This Environment variable is used to set the fully qualified domain name (FQDN) of the host machine which will be
+ # Used when outputing linkset information
+ ENV FQDN='id.mydomainname_currently_set_in_dockerfile.com'
+
 # Install Node for GS1 Digital Link Toolikit
 RUN apt-get update && apt-get install -y curl && curl -sL https://deb.nodesource.com/setup_18.x | bash -
 RUN apt-get install -y nodejs nano
