Add API docs and improve configs for Swagger UI and inspections
Enhanced the Flask API setup by enabling Swagger UI at `/api/docs` for better API documentation. Updated Nginx configuration to route `/swaggerui` to the data entry service and added additional properties for MongoDB in IntelliJ. Enabled weak warnings for duplicated code inspection in the project's default profile.

AI Observations:

These changes improve both usability and maintainability. Adding Swagger greatly enhances documentation and debugging, while the Nginx proxy setup complements the API changes well. The inspection profile tweak is a minor but helpful addition; however, consider documenting the rationale for these changes to aid future contributors. Overall, solid improvements!

--- a/frontend_proxy_server/nginx.conf
+++ b/frontend_proxy_server/nginx.conf
@@ -42,6 +42,14 @@ user  nginx;
                  proxy_set_header X-Forwarded-Proto $scheme;
              }
 
+             location /swaggerui {
+                 proxy_pass http://data-entry-service:3000;
+                 proxy_set_header Host $host;
+                 proxy_set_header X-Real-IP $remote_addr;
+                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                 proxy_set_header X-Forwarded-Proto $scheme;
+             }
+
              location /test {
                  proxy_pass http://test-service:2000/;
                  proxy_set_header Host $host;
